unterminated listing, tables, etc due to figcaption positioning

--- a/versions/latest/modules/en/pages/about-rancher/architecture/communicating-with-downstream-clusters.adoc
+++ b/versions/latest/modules/en/pages/about-rancher/architecture/communicating-with-downstream-clusters.adoc
@@ -2,7 +2,9 @@
 
 This section describes how Rancher provisions and manages the downstream user clusters that run your apps and services.
 
-The below diagram shows how the cluster controllers, cluster agents, and node agents allow Rancher to control downstream clusters.+++<figcaption>+++Communicating with Downstream Clusters+++</figcaption>+++
+The below diagram shows how the cluster controllers, cluster agents, and node agents allow Rancher to control downstream clusters.
+
++++<figcaption>+++Communicating with Downstream Clusters+++</figcaption>+++
 
 image:rancher-architecture-cluster-controller.svg[Rancher Components]
 
