--- a/versions/latest/modules/en/pages/installation-and-upgrade/install-kubernetes/rke1-for-rancher.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/install-kubernetes/rke1-for-rancher.adoc
@@ -73,7 +73,9 @@ ingress:
     use-forwarded-headers: "true"
 
 kubernetes_version: v1.25.6-rancher4-1
-----+++<figcaption>+++Common RKE Nodes Options+++</figcaption>+++
+----
+
++++<figcaption>+++Common RKE Nodes Options+++</figcaption>+++
 
 |===
 | Option | Required | Description
