--- a/versions/latest/modules/en/pages/installation-and-upgrade/requirements/port-requirements.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/requirements/port-requirements.adoc
@@ -43,7 +43,9 @@ The VXLAN port on nodes should not be exposed to the world as it opens up your c
 ====
 
 
-The following tables break down the port requirements for inbound and outbound traffic:+++<figcaption>+++Inbound Rules for Rancher Server Nodes+++</figcaption>+++
+The following tables break down the port requirements for inbound and outbound traffic:
+
++++<figcaption>+++Inbound Rules for Rancher Server Nodes+++</figcaption>+++
 
 |===
 | Protocol | Port | Source | Description
@@ -72,7 +74,9 @@ The following tables break down the port requirements for inbound and outbound t
 | 10250
 | K3s server and agent nodes
 | kubelet
-|===+++<figcaption>+++Outbound Rules for Rancher Nodes+++</figcaption>+++
+|===
+
++++<figcaption>+++Outbound Rules for Rancher Nodes+++</figcaption>+++
 
 | Protocol | Port | Destination                                              | Description                                   |
 | ------ | --- | -------------------------------------- | ------------------------------ |
@@ -89,7 +93,9 @@ The following tables break down the port requirements for inbound and outbound t
 ======
 Typically Rancher is installed on three RKE nodes that all have the etcd, control plane and worker roles.
 
-The following tables break down the port requirements for traffic between the Rancher nodes:+++<figcaption>+++Rules for traffic between Rancher nodes+++</figcaption>+++
+The following tables break down the port requirements for traffic between the Rancher nodes:
+
++++<figcaption>+++Rules for traffic between Rancher nodes+++</figcaption>+++
 
 |===
 | Protocol | Port | Description
@@ -131,7 +137,9 @@ The following tables break down the port requirements for traffic between the Ra
 | Ingress controller livenessProbe/readinessProbe
 |===
 
-The following tables break down the port requirements for inbound and outbound traffic:+++<figcaption>+++Inbound Rules for Rancher Nodes+++</figcaption>+++
+The following tables break down the port requirements for inbound and outbound traffic:
+
++++<figcaption>+++Inbound Rules for Rancher Nodes+++</figcaption>+++
 
 |===
 | Protocol | Port | Source | Description
@@ -155,7 +163,9 @@ The following tables break down the port requirements for inbound and outbound t
 | 6443
 | Kubernetes API clients
 | HTTPS traffic to Kubernetes API
-|===+++<figcaption>+++Outbound Rules for Rancher Nodes+++</figcaption>+++
+|===
+
++++<figcaption>+++Outbound Rules for Rancher Nodes+++</figcaption>+++
 
 | Protocol | Port | Destination | Description |
 |----|----|-----------|--|
@@ -247,7 +257,9 @@ Typically all outbound traffic is allowed.
 .Click to expand
 [%collapsible]
 ======
-The following tables break down the port requirements for Rancher nodes, for inbound and outbound traffic:+++<figcaption>+++Inbound Rules for Rancher Node+++</figcaption>+++
+The following tables break down the port requirements for Rancher nodes, for inbound and outbound traffic:
+
++++<figcaption>+++Inbound Rules for Rancher Node+++</figcaption>+++
 
 |===
 | Protocol | Port | Source | Description
@@ -261,7 +273,9 @@ The following tables break down the port requirements for Rancher nodes, for inb
 | 443
 | <ul><li>hosted/registered Kubernetes</li><li>any source that needs to be able to use the Rancher UI or API</li></ul>
 | Rancher agent, Rancher UI/API, kubectl
-|===+++<figcaption>+++Outbound Rules for Rancher Node+++</figcaption>+++
+|===
+
++++<figcaption>+++Outbound Rules for Rancher Node+++</figcaption>+++
 
 | Protocol | Port | Source | Description |
 |----|----|-----------|--|
@@ -277,7 +291,9 @@ Downstream Kubernetes clusters run your apps and services. This section describe
 
 The port requirements differ depending on how the downstream cluster was launched. Each of the tabs below list the ports that need to be opened for different xref:cluster-deployment/cluster-deployment.adoc[cluster types].
 
-The following diagram depicts the ports that are opened for each xref:cluster-deployment/cluster-deployment.adoc[cluster type].+++<figcaption>+++Port Requirements for the Rancher Management Plane+++</figcaption>+++
+The following diagram depicts the ports that are opened for each xref:cluster-deployment/cluster-deployment.adoc[cluster type].
+
++++<figcaption>+++Port Requirements for the Rancher Management Plane+++</figcaption>+++
 
 image:port-communications.svg[Basic Port Requirements]
 
