--- a/versions/latest/modules/en/pages/integrations/neuvector/overview.adoc
+++ b/versions/latest/modules/en/pages/integrations/neuvector/overview.adoc
@@ -71,9 +71,13 @@ The NeuVector security solution contains four types of security containers: Cont
 * *Manager:* Provides a web-UI and CLI console to manage the NeuVector platform.
 * *All-in-One:* Includes the Controller, Enforcer, and Manager.
 * *Scanner:* Performs the vulnerability and compliance scanning for images, containers, and nodes.
-* *Updater:* Updates the CVE database for Neuvector (when run); redeploys scanner pods.+++<figcaption>+++**NeuVector Security Containers:**+++</figcaption>+++
+* *Updater:* Updates the CVE database for Neuvector (when run); redeploys scanner pods.
 
-image:neuvector-security-containers.png[NeuVector Security Containers]+++<figcaption>+++**NeuVector Architecture:**+++</figcaption>+++
++++<figcaption>+++**NeuVector Security Containers:**+++</figcaption>+++
+
+image:neuvector-security-containers.png[NeuVector Security Containers]
+
++++<figcaption>+++**NeuVector Architecture:**+++</figcaption>+++
 
 image:neuvector-architecture.png[NeuVector Architecture]
 
