--- a/versions/latest/modules/en/pages/observability/monitoring-and-dashboards/built-in-dashboards.adoc
+++ b/versions/latest/modules/en/pages/observability/monitoring-and-dashboards/built-in-dashboards.adoc
@@ -50,7 +50,9 @@ To see the Alertmanager UI,
 
 *Result:* The Alertmanager UI opens in a new tab. For help with configuration, refer to the https://prometheus.io/docs/alerting/latest/alertmanager/[official Alertmanager documentation.]
 
-For more information on configuring Alertmanager in Rancher, see xref:observability/monitoring-and-dashboards/configuration/advanced/alertmanager.adoc[this page.]+++<figcaption>+++The Alertmanager UI+++</figcaption>+++
+For more information on configuring Alertmanager in Rancher, see xref:observability/monitoring-and-dashboards/configuration/advanced/alertmanager.adoc[this page.]
+
++++<figcaption>+++The Alertmanager UI+++</figcaption>+++
 
 image:alertmanager-ui.png[Alertmanager UI]
 
@@ -67,7 +69,9 @@ To see the Prometheus UI, install `rancher-monitoring`. Then:
 . In the upper left corner, click *☰ > Cluster Management*.
 . On the *Clusters* page, go to the cluster where you want to see the Prometheus UI and click *Explore*.
 . In the left navigation bar, click *Monitoring*.
-. Click *Prometheus Graph*.+++<figcaption>+++Prometheus Graph UI+++</figcaption>+++
+. Click *Prometheus Graph*.
+
++++<figcaption>+++Prometheus Graph UI+++</figcaption>+++
 
 image:prometheus-graph-ui.png[Prometheus Graph UI]
 
@@ -80,7 +84,9 @@ To see the Prometheus Targets, install `rancher-monitoring`. Then:
 . In the upper left corner, click *☰ > Cluster Management*.
 . On the *Clusters* page, go to the cluster where you want to see the Prometheus targets and click *Explore*.
 . In the left navigation bar, click *Monitoring*.
-. Click *Prometheus Targets*.+++<figcaption>+++Targets in the Prometheus UI+++</figcaption>+++
+. Click *Prometheus Targets*.
+
++++<figcaption>+++Targets in the Prometheus UI+++</figcaption>+++
 
 image:prometheus-targets-ui.png[Prometheus Targets UI]
 
@@ -95,7 +101,9 @@ To see the PrometheusRules, install `rancher-monitoring`. Then:
 . In the left navigation bar, click *Monitoring*.
 . Click *Prometheus Rules*.
 
-You can also see the rules in the Prometheus UI:+++<figcaption>+++Rules in the Prometheus UI+++</figcaption>+++
+You can also see the rules in the Prometheus UI:
+
++++<figcaption>+++Rules in the Prometheus UI+++</figcaption>+++
 
 image:prometheus-rules-ui.png[PrometheusRules UI]
 
