--- a/versions/latest/modules/en/pages/rancher-admin/users/authn-and-authz/openldap/reference.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/users/authn-and-authz/openldap/reference.adoc
@@ -23,7 +23,9 @@ ____
 If the certificate used by the OpenLDAP server is self-signed or not from a recognized certificate authority, make sure have at hand the CA certificate (concatenated with any intermediate certificates) in PEM format. You will have to paste in this certificate during the configuration so that Rancher is able to validate the certificate chain.
 ____
 
-If you are in doubt about the correct values to enter in the user/group Search Base configuration fields, consult your LDAP administrator or refer to the section xref:rancher-admin/users/authn-and-authz/configure-active-directory.adoc#_annex_identify_search_base_and_schema_using_ldapsearch[Identify Search Base and Schema using ldapsearch] in the Active Directory authentication documentation.+++<figcaption>+++OpenLDAP Server Parameters+++</figcaption>+++
+If you are in doubt about the correct values to enter in the user/group Search Base configuration fields, consult your LDAP administrator or refer to the section xref:rancher-admin/users/authn-and-authz/configure-active-directory.adoc#_annex_identify_search_base_and_schema_using_ldapsearch[Identify Search Base and Schema using ldapsearch] in the Active Directory authentication documentation.
+
++++<figcaption>+++OpenLDAP Server Parameters+++</figcaption>+++
 
 |===
 | Parameter | Description
@@ -63,7 +65,9 @@ If you are unfamiliar with the user/group schema used in the OpenLDAP server, co
 
 === User Schema Configuration
 
-The table below details the parameters for the user schema configuration.+++<figcaption>+++User Schema Configuration Parameters+++</figcaption>+++
+The table below details the parameters for the user schema configuration.
+
++++<figcaption>+++User Schema Configuration Parameters+++</figcaption>+++
 
 |===
 | Parameter | Description
@@ -92,7 +96,9 @@ The table below details the parameters for the user schema configuration.+++<fig
 
 === Group Schema Configuration
 
-The table below details the parameters for the group schema configuration.+++<figcaption>+++Group Schema Configuration Parameters+++</figcaption>+++
+The table below details the parameters for the group schema configuration.
+
++++<figcaption>+++Group Schema Configuration Parameters+++</figcaption>+++
 
 |===
 | Parameter | Description
