--- a/versions/latest/modules/zh/pages/about-rancher/architecture/communicating-with-downstream-clusters.adoc
+++ b/versions/latest/modules/zh/pages/about-rancher/architecture/communicating-with-downstream-clusters.adoc
@@ -2,7 +2,9 @@
 
 本节介绍 Rancher 如何配置和管理运行应用和服务的下游集群。
 
-下图显示了 Cluster Controller、Cluster Agent 和 Node Agent 让 Rancher 控制下游集群的。+++<figcaption>+++与下游集群通信+++</figcaption>+++
+下图显示了 Cluster Controller、Cluster Agent 和 Node Agent 让 Rancher 控制下游集群的。
+
++++<figcaption>+++与下游集群通信+++</figcaption>+++
 
 image:rancher-architecture-cluster-controller.svg[Rancher 组件]
 
