--- a/versions/latest/modules/zh/pages/about-rancher/architecture/rancher-server-and-components.adoc
+++ b/versions/latest/modules/zh/pages/about-rancher/architecture/rancher-server-and-components.adoc
@@ -6,7 +6,9 @@
 
 为了达到最佳性能和安全性，我们建议你为 Rancher Management Server 创建一个专用的 Kubernetes 集群。不建议在此集群上运行用户工作负载。部署 Rancher 后，你可以xref:cluster-deployment/cluster-deployment.adoc[创建或导入集群]来运行你的工作负载。
 
-下图介绍了用户如何通过 Rancher 的认证代理管理 xref:cluster-deployment/launch-kubernetes-with-rancher.adoc[Rancher 启动的 Kubernetes] 集群和xref:cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc[托管的 Kubernetes] 集群：+++<figcaption>+++通过 Rancher 的认证代理管理 Kubernetes 集群+++</figcaption>+++
+下图介绍了用户如何通过 Rancher 的认证代理管理 xref:cluster-deployment/launch-kubernetes-with-rancher.adoc[Rancher 启动的 Kubernetes] 集群和xref:cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc[托管的 Kubernetes] 集群：
+
++++<figcaption>+++通过 Rancher 的认证代理管理 Kubernetes 集群+++</figcaption>+++
 
 image:rancher-architecture-rancher-api-server.svg[架构]
 
