--- a/versions/latest/modules/zh/pages/cluster-deployment/infra-providers/infra-providers.adoc
+++ b/versions/latest/modules/zh/pages/cluster-deployment/infra-providers/infra-providers.adoc
@@ -63,7 +63,9 @@
 
 *离线环境中的 RKE1 下游集群节点*：
 
-默认情况下，在配置 RKE1 下游集群节点时（例如在 vSphere 中），Rancher 会尝试运行 Docker 安装脚本。但是，Rancher Docker 安装脚本在离线环境中会运行失败。要解决此问题，如果 Docker 已预安装到 VM 镜像上，你可以选择在创建节点模板时跳过安装 Docker。为此，你可以在 Rancher UI **引擎选项**下的 `Docker 安装 URL` 下拉列表中选择 *无*。+++<figcaption>+++**引擎选项下拉列表**+++</figcaption>+++
+默认情况下，在配置 RKE1 下游集群节点时（例如在 vSphere 中），Rancher 会尝试运行 Docker 安装脚本。但是，Rancher Docker 安装脚本在离线环境中会运行失败。要解决此问题，如果 Docker 已预安装到 VM 镜像上，你可以选择在创建节点模板时跳过安装 Docker。为此，你可以在 Rancher UI **引擎选项**下的 `Docker 安装 URL` 下拉列表中选择 *无*。
+
++++<figcaption>+++**引擎选项下拉列表**+++</figcaption>+++
 
 image:node-template-engine-options-rke1.png[引擎选项下拉列表]
 
