--- a/versions/latest/modules/zh/pages/cluster-deployment/infra-providers/vsphere/best-practices.adoc
+++ b/versions/latest/modules/zh/pages/cluster-deployment/infra-providers/vsphere/best-practices.adoc
@@ -5,7 +5,9 @@
 * <<_1_虚拟机注意事项,1. 虚拟机注意事项>>
 * <<_2_网络注意事项,2. 网络注意事项>>
 * <<_3_存储注意事项,3. 存储注意事项>>
-* <<_4_备份和灾难恢复,4. 备份和灾难恢复>>+++<figcaption>+++解决方案概述+++</figcaption>+++
+* <<_4_备份和灾难恢复,4. 备份和灾难恢复>>
+
++++<figcaption>+++解决方案概述+++</figcaption>+++
 
 image:solution_overview.drawio.svg[解决方案概述]
 
