--- a/versions/latest/modules/zh/pages/installation-and-upgrade/install-kubernetes/rke1-for-rancher.adoc
+++ b/versions/latest/modules/zh/pages/installation-and-upgrade/install-kubernetes/rke1-for-rancher.adoc
@@ -73,7 +73,9 @@ ingress:
     use-forwarded-headers: "true"
 
 kubernetes_version: v1.25.6-rancher4-1
-----+++<figcaption>+++通用 RKE 节点选项+++</figcaption>+++
+----
+
++++<figcaption>+++通用 RKE 节点选项+++</figcaption>+++
 
 |===
 | 选项 | 必填 | 描述
