--- a/versions/latest/modules/zh/pages/observability/istio/configuration/selectors-and-scrape-configurations.adoc
+++ b/versions/latest/modules/zh/pages/observability/istio/configuration/selectors-and-scrape-configurations.adoc
@@ -43,7 +43,9 @@ Monitoring 应用设置了 `prometheus.prometheusSpec.ignoreNamespaceSelectors=f
 . 如果 ServiceMonitor 或 PodMonitor 没有存储在本地，请运行 `cat<< EOF | kubectl apply -f -`，将文件内容粘贴到终端，然后运行 ​​`EOF` 来完成命令。
 . 运行 `kubectl label namespace <your namespace> istio-injection=enabled` 来启用 Envoy sidecar 注入。
 
-*结果*：Prometheus 可以抓取 `<your namespace>`。+++<figcaption>+++Istio 代理的 ServiceMonitor 示例+++</figcaption>+++
+*结果*：Prometheus 可以抓取 `<your namespace>`。
+
++++<figcaption>+++Istio 代理的 ServiceMonitor 示例+++</figcaption>+++
 
 [,yaml]
 ----
@@ -88,7 +90,9 @@ spec:
 . 安装或升级 Monitoring Helm Chart 时，编辑 values.yml 并将 `prometheus.prometheusSpec.additionalScrapeConfigs` 数组设置为下方的**其它抓取配置**。
 . 完成安装或升级。
 
-*结果*：Promethe 会抓取所有带有 `istio-injection=enabled` 标签的命名空间。+++<figcaption>+++其它抓取配置+++</figcaption>+++
+*结果*：Promethe 会抓取所有带有 `istio-injection=enabled` 标签的命名空间。
+
++++<figcaption>+++其它抓取配置+++</figcaption>+++
 
 [,yaml]
 ----
