--- a/versions/latest/modules/zh/pages/observability/monitoring-and-dashboards/built-in-dashboards.adoc
+++ b/versions/latest/modules/zh/pages/observability/monitoring-and-dashboards/built-in-dashboards.adoc
@@ -50,7 +50,9 @@ Alertmanager UI 可让你查看最近触发的告警。
 
 *结果*：在新选项卡中打开 Alertmanager UI。如需配置帮助，请参阅link:https://prometheus.io/docs/alerting/latest/alertmanager/[官方 Alertmanager 文档]。
 
-有关在 Rancher 中配置 Alertmanager 的更多信息，请参阅xref:observability/monitoring-and-dashboards/configuration/advanced/alertmanager.adoc[此页面]。+++<figcaption>+++Alertmanager UI+++</figcaption>+++
+有关在 Rancher 中配置 Alertmanager 的更多信息，请参阅xref:observability/monitoring-and-dashboards/configuration/advanced/alertmanager.adoc[此页面]。
+
++++<figcaption>+++Alertmanager UI+++</figcaption>+++
 
 image:alertmanager-ui.png[Alertmanager UI]
 
@@ -67,7 +69,9 @@ image:alertmanager-ui.png[Alertmanager UI]
 . 在左上角，单击 *☰ > 集群管理*。
 . 在**集群**页面上，转到要查看 Prometheus UI 的集群，然后单击 *Explore*。
 . 在左侧导航栏中，单击**监控**。
-. 单击 *Prometheus Graph*。+++<figcaption>+++Prometheus Graph UI+++</figcaption>+++
+. 单击 *Prometheus Graph*。
+
++++<figcaption>+++Prometheus Graph UI+++</figcaption>+++
 
 image:prometheus-graph-ui.png[Prometheus Graph UI]
 
@@ -80,7 +84,9 @@ image:prometheus-graph-ui.png[Prometheus Graph UI]
 . 在左上角，单击 *☰ > 集群管理*。
 . 在**集群**页面上，转到要查看 Prometheus 目标的集群，然后单击 *Explore*。
 . 在左侧导航栏中，单击**监控**。
-. 单击 *Prometheus 目标*。+++<figcaption>+++Prometheus UI 中的目标+++</figcaption>+++
+. 单击 *Prometheus 目标*。
+
++++<figcaption>+++Prometheus UI 中的目标+++</figcaption>+++
 
 image:prometheus-targets-ui.png[Prometheus 目标 UI]
 
@@ -95,7 +101,9 @@ image:prometheus-targets-ui.png[Prometheus 目标 UI]
 . 在左侧导航栏中，单击**监控**。
 . 点击 *Prometheus 规则*。
 
-你还可以在 Prometheus UI 中查看规则：+++<figcaption>+++Prometheus UI 中的规则+++</figcaption>+++
+你还可以在 Prometheus UI 中查看规则：
+
++++<figcaption>+++Prometheus UI 中的规则+++</figcaption>+++
 
 image:prometheus-rules-ui.png[PrometheusRules UI]
 
