--- a/versions/v2.8/modules/zh/pages/integrations/neuvector/overview.adoc
+++ b/versions/v2.8/modules/zh/pages/integrations/neuvector/overview.adoc
@@ -75,7 +75,9 @@ NeuVector 安全解决方案包含四种类型的安全容器，分别是 Contro
 * *Manager：* 提供一个 web-UI 和 CLI 控制台来管理 NeuVector 平台。
 * *All-in-One：* 包括 Controller、Enforcer 和 Manager。
 * *Scanner：* 对镜像、容器和节点执行漏洞和合规性扫描。
-* *Updater：* 更新 Neuvector 的 CVE 数据库（运行的时候）；重新部署 scanner pod。+++<figcaption>+++**NeuVector 安全容器：**+++</figcaption>+++
+* *Updater：* 更新 Neuvector 的 CVE 数据库（运行的时候）；重新部署 scanner pod。
+
++++<figcaption>+++**NeuVector 安全容器：**+++</figcaption>+++
 
 image:neuvector-security-containers.png[NeuVector 安全容器]
 
