--- a/versions/v2.8/modules/zh/pages/observability/monitoring-and-dashboards/rbac-for-monitoring.adoc
+++ b/versions/v2.8/modules/zh/pages/observability/monitoring-and-dashboards/rbac-for-monitoring.adoc
@@ -230,7 +230,9 @@ subjects:
 
 == 具有 Rancher 权限的用户
 
-Rancher 部署的默认角色（即 cluster-owner、cluster-member、project-owner、project-member）、Kubernetes 默认角色，以及 rancher-monitoring Chart 部署的角色之间的关系如下：+++<figcaption>+++默认 Rancher 权限和对应的 Kubernetes ClusterRole+++</figcaption>+++
+Rancher 部署的默认角色（即 cluster-owner、cluster-member、project-owner、project-member）、Kubernetes 默认角色，以及 rancher-monitoring Chart 部署的角色之间的关系如下：
+
++++<figcaption>+++默认 Rancher 权限和对应的 Kubernetes ClusterRole+++</figcaption>+++
 
 |===
 | Rancher 角色 | Kubernetes 角色 | Monitoring ClusterRole/Role | ClusterRoleBinding/RoleBinding
@@ -256,7 +258,9 @@ Rancher 部署的默认角色（即 cluster-owner、cluster-member、project-own
 | 项目命名空间中的 RoleBinding
 |===
 
-除这些默认角色之外，你还可以将以下的其他 Rancher 项目角色应用于集群成员，以提供对 Monitoring 的其他访问。这些 Rancher 角色将与 Monitoring Chart 部署的 ClusterRole 相关联：+++<figcaption>+++非默认的 Rancher 权限和对应的 Kubernetes ClusterRole+++</figcaption>+++
+除这些默认角色之外，你还可以将以下的其他 Rancher 项目角色应用于集群成员，以提供对 Monitoring 的其他访问。这些 Rancher 角色将与 Monitoring Chart 部署的 ClusterRole 相关联：
+
++++<figcaption>+++非默认的 Rancher 权限和对应的 Kubernetes ClusterRole+++</figcaption>+++
 
 |===
 | Rancher 角色 | Kubernetes ClusterRole | 可用 Rancher 版本 | 可用 Monitoring V2 版本
@@ -324,8 +328,12 @@ Rancher 部署的默认角色（即 cluster-owner、cluster-member、project-own
 . 在左上角，单击 *☰ > 集群管理*。
 . 在**集群**页面上，转到要可视化的集群，然后单击 *Explore*。
 . 在左侧导航栏中，单击**监控**。
-. 点击 *Grafana*。+++<figcaption>+++Grafana 中的集群计算资源仪表板+++</figcaption>+++
+. 点击 *Grafana*。
 
-image:cluster-compute-resources-dashboard.png[Grafana 中的集群计算资源仪表板]+++<figcaption>+++Grafana 中的默认仪表板+++</figcaption>+++
++++<figcaption>+++Grafana 中的集群计算资源仪表板+++</figcaption>+++
+
+image:cluster-compute-resources-dashboard.png[Grafana 中的集群计算资源仪表板]
+
++++<figcaption>+++Grafana 中的默认仪表板+++</figcaption>+++
 
 image:grafana-default-dashboard.png[Grafana 中的默认仪表板]
