--- a/versions/latest/modules/en/pages/about-rancher/architecture/rancher-server-and-components.adoc
+++ b/versions/latest/modules/en/pages/about-rancher/architecture/rancher-server-and-components.adoc
@@ -6,7 +6,9 @@ The figure below illustrates the high-level architecture of Rancher 2.x. The fig
 
 For the best performance and security, we recommend a dedicated Kubernetes cluster for the Rancher management server. Running user workloads on this cluster is not advised. After deploying Rancher, you can xref:cluster-deployment/cluster-deployment.adoc[create or import clusters] for running your workloads.
 
-The diagram below shows how users can manipulate both xref:cluster-deployment/launch-kubernetes-with-rancher.adoc[Rancher-launched Kubernetes] clusters and xref:cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc[hosted Kubernetes] clusters through Rancher's authentication proxy:+++<figcaption>+++Managing Kubernetes Clusters through Rancher's Authentication Proxy+++</figcaption>+++
+The diagram below shows how users can manipulate both xref:cluster-deployment/launch-kubernetes-with-rancher.adoc[Rancher-launched Kubernetes] clusters and xref:cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc[hosted Kubernetes] clusters through Rancher's authentication proxy:
+
++++<figcaption>+++Managing Kubernetes Clusters through Rancher's Authentication Proxy+++</figcaption>+++
 
 image:rancher-architecture-rancher-api-server.svg[Architecture]
 
