--- a/versions/latest/modules/en/pages/cluster-admin/helm-charts-in-rancher/create-apps.adoc
+++ b/versions/latest/modules/en/pages/cluster-admin/helm-charts-in-rancher/create-apps.adoc
@@ -53,7 +53,9 @@ A file that provides descriptive text in the chart's UI header.
 
 * `questions.yml`
 +
-A file that contains questions for a form. These form questions simplify deployment of a chart. Without it, you must configure the deployment using a values YAML config, which is more difficult. The following images display the difference between a Rancher chart (which includes `questions.yml`) and a native Helm chart (which does not).+++<figcaption>+++Rancher Chart with `questions.yml` (top) vs. Helm Chart without (bottom)+++</figcaption>+++
+A file that contains questions for a form. These form questions simplify deployment of a chart. Without it, you must configure the deployment using a values YAML config, which is more difficult. The following images display the difference between a Rancher chart (which includes `questions.yml`) and a native Helm chart (which does not).
+
++++<figcaption>+++Rancher Chart with `questions.yml` (top) vs. Helm Chart without (bottom)+++</figcaption>+++
 +
 image:rancher-app-2.6.png[questions.yml]
   image:helm-app-2.6.png[values.yaml]
