--- a/versions/latest/modules/en/pages/installation-and-upgrade/best-practices/rancher-on-vsphere.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/best-practices/rancher-on-vsphere.adoc
@@ -1,6 +1,8 @@
 = Installing Rancher in a VMware vSphere Environment
 
-This guide outlines a reference architecture for installing Rancher on an RKE Kubernetes cluster in a VMware vSphere environment. It also desctibes standard vSphere best practices as documented by VMware.+++<figcaption>+++Solution Overview+++</figcaption>+++
+This guide outlines a reference architecture for installing Rancher on an RKE Kubernetes cluster in a VMware vSphere environment. It also desctibes standard vSphere best practices as documented by VMware.
+
++++<figcaption>+++Solution Overview+++</figcaption>+++
 
 image:rancher-on-prem-vsphere.svg[Solution Overview]
 
