--- a/versions/latest/modules/en/pages/observability/logging/logging-architecture.adoc
+++ b/versions/latest/modules/en/pages/observability/logging/logging-architecture.adoc
@@ -19,6 +19,8 @@ The following custom resources are used to define how logs are filtered and sent
 
 Each `Flow` must reference an `Output`, and each `ClusterFlow` must reference a `ClusterOutput`.
 
-The following figure from the https://kube-logging.github.io/docs/#architecture[Logging Operator documentation] shows the new logging architecture:+++<figcaption>+++How the Logging Operator Works with Fluentd and Fluent Bit+++</figcaption>+++
+The following figure from the https://kube-logging.github.io/docs/#architecture[Logging Operator documentation] shows the new logging architecture:
+
++++<figcaption>+++How the Logging Operator Works with Fluentd and Fluent Bit+++</figcaption>+++
 
 image:banzai-cloud-logging-operator.png[How the Logging Operator Works with Fluentd]
