--- a/versions/latest/modules/zh/pages/observability/logging/logging-architecture.adoc
+++ b/versions/latest/modules/zh/pages/observability/logging/logging-architecture.adoc
@@ -19,6 +19,8 @@ Fluent Bit 查询 Kubernetes API 并使用 pod 的元数据来丰富日志，然
 
 每个 `Flow` 都必须引用一个 `Output`，而每个 `ClusterFlow` 都必须引用一个 `ClusterOutput`。
 
-https://kube-logging.github.io/docs/#architecture[Logging Operator 文档]中的下图显示了新的 Logging 架构：+++<figcaption>+++Logging Operator 如何与 Fluentd 和 Fluent Bit 一起使用+++</figcaption>+++
+https://kube-logging.github.io/docs/#architecture[Logging Operator 文档]中的下图显示了新的 Logging 架构：
+
++++<figcaption>+++Logging Operator 如何与 Fluentd 和 Fluent Bit 一起使用+++</figcaption>+++
 
 image:banzai-cloud-logging-operator.png[Logging Operator 如何与 Fluentd 一起使用]
