--- a/versions/v2.8/modules/en/pages/about-rancher/architecture/recommendations.adoc
+++ b/versions/v2.8/modules/en/pages/about-rancher/architecture/recommendations.adoc
@@ -20,13 +20,17 @@ We don't recommend installing Rancher in a single Docker container, because if t
 
 === K3s Kubernetes Cluster Installations
 
-One option for the underlying Kubernetes cluster is to use K3s Kubernetes. K3s is Rancher's CNCF certified Kubernetes distribution. It is easy to install and uses half the memory of Kubernetes, all in a binary of less than 100 MB. Another advantage of K3s is that it allows an external datastore to hold the cluster data, allowing the K3s server nodes to be treated as ephemeral.+++<figcaption>+++Architecture of a K3s Kubernetes Cluster Running the Rancher Management Server+++</figcaption>+++
+One option for the underlying Kubernetes cluster is to use K3s Kubernetes. K3s is Rancher's CNCF certified Kubernetes distribution. It is easy to install and uses half the memory of Kubernetes, all in a binary of less than 100 MB. Another advantage of K3s is that it allows an external datastore to hold the cluster data, allowing the K3s server nodes to be treated as ephemeral.
+
++++<figcaption>+++Architecture of a K3s Kubernetes Cluster Running the Rancher Management Server+++</figcaption>+++
 
 image:k3s-server-storage.svg[Architecture of a K3s Kubernetes Cluster Running the Rancher Management Server]
 
 === RKE Kubernetes Cluster Installations
 
-In an RKE installation, the cluster data is replicated on each of three etcd nodes in the cluster, providing redundancy and data duplication in case one of the nodes fails.+++<figcaption>+++Architecture of an RKE Kubernetes Cluster Running the Rancher Management Server+++</figcaption>+++
+In an RKE installation, the cluster data is replicated on each of three etcd nodes in the cluster, providing redundancy and data duplication in case one of the nodes fails.
+
++++<figcaption>+++Architecture of an RKE Kubernetes Cluster Running the Rancher Management Server+++</figcaption>+++
 
 image:rke-server-storage.svg[Architecture of an RKE Kubernetes cluster running the Rancher management server]
 
@@ -37,7 +41,9 @@ We recommend the following configurations for the load balancer and Ingress cont
 * The DNS for Rancher should resolve to a Layer 4 load balancer (TCP).
 * The Load Balancer should forward port TCP/80 and TCP/443 to all 3 nodes in the Kubernetes cluster.
 * The Ingress controller will redirect HTTP to HTTPS and terminate SSL/TLS on port TCP/443.
-* The Ingress controller will forward traffic to port TCP/80 on the pod in the Rancher deployment.+++<figcaption>+++Rancher installed on a Kubernetes cluster with layer 4 load balancer, depicting SSL termination at Ingress controllers+++</figcaption>+++
+* The Ingress controller will forward traffic to port TCP/80 on the pod in the Rancher deployment.
+
++++<figcaption>+++Rancher installed on a Kubernetes cluster with layer 4 load balancer, depicting SSL termination at Ingress controllers+++</figcaption>+++
 
 image:ha/rancher2ha.svg[Rancher HA]
 
