--- a/versions/v2.8/modules/en/pages/cluster-deployment/hosted-kubernetes/eks/eks.adoc
+++ b/versions/v2.8/modules/en/pages/cluster-deployment/hosted-kubernetes/eks/eks.adoc
@@ -64,7 +64,9 @@ For the full list of EKS cluster configuration options, see xref:cluster-deploym
 
 == Architecture
 
-The figure below illustrates the high-level architecture of Rancher 2.x. The figure depicts a Rancher Server installation that manages two Kubernetes clusters: one created by RKE and another created by EKS.+++<figcaption>+++Managing Kubernetes Clusters through Rancher's Authentication Proxy+++</figcaption>+++
+The figure below illustrates the high-level architecture of Rancher 2.x. The figure depicts a Rancher Server installation that manages two Kubernetes clusters: one created by RKE and another created by EKS.
+
++++<figcaption>+++Managing Kubernetes Clusters through Rancher's Authentication Proxy+++</figcaption>+++
 
 image:rancher-architecture-rancher-api-server.svg[Architecture]
 
