--- a/versions/v2.8/modules/en/pages/cluster-deployment/infra-providers/vsphere/best-practices.adoc
+++ b/versions/v2.8/modules/en/pages/cluster-deployment/infra-providers/vsphere/best-practices.adoc
@@ -5,7 +5,9 @@ This guide outlines a reference architecture for provisioning downstream Rancher
 * <<_1_vm_considerations,1. VM Considerations>>
 * <<_2_network_considerations,2. Network Considerations>>
 * <<_3_storage_considerations,3. Storage Considerations>>
-* <<_4_backups_and_disaster_recovery,4. Backups and Disaster Recovery>>+++<figcaption>+++Solution Overview+++</figcaption>+++
+* <<_4_backups_and_disaster_recovery,4. Backups and Disaster Recovery>>
+
++++<figcaption>+++Solution Overview+++</figcaption>+++
 
 image:solution_overview.drawio.svg[Solution Overview]
 
