--- a/versions/v2.8/modules/en/pages/installation-and-upgrade/best-practices/high-availability-installs.adoc
+++ b/versions/v2.8/modules/en/pages/installation-and-upgrade/best-practices/high-availability-installs.adoc
@@ -15,7 +15,9 @@ For information on how Rancher works, regardless of the installation method, ref
 * DNS for Rancher should resolve to a layer 4 load balancer
 * The Load Balancer should forward port TCP/80 and TCP/443 to all 3 nodes in the Kubernetes cluster.
 * The Ingress controller will redirect HTTP to HTTPS and terminate SSL/TLS on port TCP/443.
-* The Ingress controller will forward traffic to port TCP/80 on the pod in the Rancher deployment.+++<figcaption>+++Kubernetes Rancher install with layer 4 load balancer, depicting SSL termination at ingress controllers+++</figcaption>+++
+* The Ingress controller will forward traffic to port TCP/80 on the pod in the Rancher deployment.
+
++++<figcaption>+++Kubernetes Rancher install with layer 4 load balancer, depicting SSL termination at ingress controllers+++</figcaption>+++
 
 image:ha/rancher2ha.svg[High-availability Kubernetes Installation of Rancher]
 ^Kubernetes Rancher install with Layer 4 load balancer (TCP), depicting SSL termination at ingress controllers^
