--- a/versions/v2.8/modules/en/pages/integrations/longhorn/overview.adoc
+++ b/versions/v2.8/modules/en/pages/integrations/longhorn/overview.adoc
@@ -13,7 +13,9 @@ With Longhorn, you can:
 * Create cross-cluster disaster recovery volumes so that data from a primary Kubernetes cluster can be quickly recovered from backup in a second Kubernetes cluster
 * Schedule recurring snapshots of a volume, and schedule recurring backups to NFS or S3-compatible secondary storage
 * Restore volumes from backup
-* Upgrade Longhorn without disrupting persistent volumes+++<figcaption>+++Longhorn Dashboard+++</figcaption>+++
+* Upgrade Longhorn without disrupting persistent volumes
+
++++<figcaption>+++Longhorn Dashboard+++</figcaption>+++
 
 image:longhorn-screenshot.png[Longhorn Dashboard]
 
@@ -59,6 +61,8 @@ Longhorn creates a dedicated storage controller for each volume and synchronousl
 
 The storage controller and replicas are themselves orchestrated using Kubernetes.
 
-You can learn more about its architecture https://longhorn.io/docs/latest/concepts/[here.]+++<figcaption>+++Longhorn Architecture+++</figcaption>+++
+You can learn more about its architecture https://longhorn.io/docs/latest/concepts/[here.]
+
++++<figcaption>+++Longhorn Architecture+++</figcaption>+++
 
 image:longhorn-architecture.svg[Longhorn Architecture]
