--- a/versions/v2.8/modules/en/pages/observability/istio/configuration/selectors-and-scrape-configurations.adoc
+++ b/versions/v2.8/modules/en/pages/observability/istio/configuration/selectors-and-scrape-configurations.adoc
@@ -43,7 +43,9 @@ Define a ServiceMonitor or PodMonitor for `<your namespace>`. An example Service
 . If the ServiceMonitor or PodMonitor is not stored locally, run `cat<< EOF | kubectl apply -f -`, paste the file contents into the terminal, then run `EOF` to complete the command.
 . Run `kubectl label namespace <your namespace> istio-injection=enabled` to enable the envoy sidecar injection.
 
-*Result:*  `<your namespace>` can be scraped by prometheus.+++<figcaption>+++Example Service Monitor for Istio Proxies+++</figcaption>+++
+*Result:*  `<your namespace>` can be scraped by prometheus.
+
++++<figcaption>+++Example Service Monitor for Istio Proxies+++</figcaption>+++
 
 [,yaml]
 ----
@@ -88,7 +90,9 @@ The usability tradeoff is that  all of Prometheus' `additionalScrapeConfigs` are
 . When installing or upgrading the Monitoring Helm chart, edit the values.yml and set the `prometheus.prometheusSpec.additionalScrapeConfigs` array to the *Additional Scrape Config* provided below.
 . Complete the install or upgrade.
 
-*Result:* All namespaces with the `istio-injection=enabled` label will be scraped by prometheus.+++<figcaption>+++Additional Scrape Config+++</figcaption>+++
+*Result:* All namespaces with the `istio-injection=enabled` label will be scraped by prometheus.
+
++++<figcaption>+++Additional Scrape Config+++</figcaption>+++
 
 [,yaml]
 ----
