--- a/versions/v2.8/modules/en/pages/observability/monitoring-and-dashboards/rbac-for-monitoring.adoc
+++ b/versions/v2.8/modules/en/pages/observability/monitoring-and-dashboards/rbac-for-monitoring.adoc
@@ -244,7 +244,9 @@ kubectl apply -f monitoring-config-view-role-binding.yaml
 
 == Users with Rancher Based Permissions
 
-The relationship between the default roles deployed by Rancher (i.e. cluster-owner, cluster-member, project-owner, project-member), the default Kubernetes roles, and the roles deployed by the rancher-monitoring chart are detailed in the table below:+++<figcaption>+++Default Rancher Permissions and Corresponding Kubernetes ClusterRoles+++</figcaption>+++
+The relationship between the default roles deployed by Rancher (i.e. cluster-owner, cluster-member, project-owner, project-member), the default Kubernetes roles, and the roles deployed by the rancher-monitoring chart are detailed in the table below:
+
++++<figcaption>+++Default Rancher Permissions and Corresponding Kubernetes ClusterRoles+++</figcaption>+++
 
 |===
 | Rancher Role | Kubernetes Role | Monitoring ClusterRole / Role | ClusterRoleBinding or RoleBinding?
@@ -270,7 +272,9 @@ The relationship between the default roles deployed by Rancher (i.e. cluster-own
 | RoleBinding within Project namespace
 |===
 
-In addition to these default roles, the following Rancher project roles can be applied to members of your cluster to provide access to monitoring. These Rancher roles are tied to ClusterRoles deployed by the monitoring chart:+++<figcaption>+++Non-default Rancher Permissions and Corresponding Kubernetes ClusterRoles+++</figcaption>+++
+In addition to these default roles, the following Rancher project roles can be applied to members of your cluster to provide access to monitoring. These Rancher roles are tied to ClusterRoles deployed by the monitoring chart:
+
++++<figcaption>+++Non-default Rancher Permissions and Corresponding Kubernetes ClusterRoles+++</figcaption>+++
 
 |===
 | Rancher Role | Kubernetes ClusterRole | Available In Rancher From | Available in Monitoring v2 From
@@ -343,8 +347,12 @@ To see the Grafana UI, install `rancher-monitoring`. Then:
 . In the upper left corner, click *☰ > Cluster Management*.
 . On the *Clusters* page, go to the cluster where you want to see the visualizations and click *Explore*.
 . In the left navigation bar, click *Monitoring*.
-. Click *Grafana*.+++<figcaption>+++Cluster Compute Resources Dashboard in Grafana+++</figcaption>+++
+. Click *Grafana*.
 
-image:cluster-compute-resources-dashboard.png[Cluster Compute Resources Dashboard in Grafana]+++<figcaption>+++Default Dashboards in Grafana+++</figcaption>+++
++++<figcaption>+++Cluster Compute Resources Dashboard in Grafana+++</figcaption>+++
+
+image:cluster-compute-resources-dashboard.png[Cluster Compute Resources Dashboard in Grafana]
+
++++<figcaption>+++Default Dashboards in Grafana+++</figcaption>+++
 
 image:grafana-default-dashboard.png[Default Dashboards in Grafana]
