--- a/versions/v2.8/modules/zh/pages/installation-and-upgrade/best-practices/rancher-on-vsphere.adoc
+++ b/versions/v2.8/modules/zh/pages/installation-and-upgrade/best-practices/rancher-on-vsphere.adoc
@@ -1,6 +1,8 @@
 = 在 vSphere 环境中安装 Rancher
 
-本指南概述了在 vSphere 环境中在 RKE Kubernetes 集群上安装 Rancher 的参考架构，以及 VMware 记录的标准 vSphere 最佳实践。+++<figcaption>+++解决方案概述+++</figcaption>+++
+本指南概述了在 vSphere 环境中在 RKE Kubernetes 集群上安装 Rancher 的参考架构，以及 VMware 记录的标准 vSphere 最佳实践。
+
++++<figcaption>+++解决方案概述+++</figcaption>+++
 
 image:rancher-on-prem-vsphere.svg[解决方案概述]
 
