--- a/versions/v2.8/modules/zh/pages/rancher-admin/users/authn-and-authz/openldap/reference.adoc
+++ b/versions/v2.8/modules/zh/pages/rancher-admin/users/authn-and-authz/openldap/reference.adoc
@@ -23,7 +23,9 @@ ____
 如果 OpenLDAP 服务器使用的证书是自签名的或不是来自认可的证书颁发机构，请确保手头有 PEM 格式的 CA 证书（包含所有中间证书）。你必须在配置期间粘贴此证书，以便 Rancher 能够验证证书链。
 ____
 
-如果你不确定要在用户/组``搜索库``字段中输入什么值，请咨询你的 LDAP 管理员，或参见 Active Directory 身份验证文档中的xref:rancher-admin/users/authn-and-authz/configure-active-directory.adoc#_附录使用_ldapsearch_确定搜索库和_schema[使用 ldapsearch 确定搜索库和 Schema] 章节。+++<figcaption>+++OpenLDAP 服务器参数+++</figcaption>+++
+如果你不确定要在用户/组``搜索库``字段中输入什么值，请咨询你的 LDAP 管理员，或参见 Active Directory 身份验证文档中的xref:rancher-admin/users/authn-and-authz/configure-active-directory.adoc#_附录使用_ldapsearch_确定搜索库和_schema[使用 ldapsearch 确定搜索库和 Schema] 章节。
+
++++<figcaption>+++OpenLDAP 服务器参数+++</figcaption>+++
 
 |===
 | 参数 | 描述
@@ -63,7 +65,9 @@ ____
 
 === 用户 Schema 配置
 
-下表详细说明了用户 Schema 配置的参数。+++<figcaption>+++用户 Schema 配置参数+++</figcaption>+++
+下表详细说明了用户 Schema 配置的参数。
+
++++<figcaption>+++用户 Schema 配置参数+++</figcaption>+++
 
 |===
 | 参数 | 描述
@@ -92,7 +96,9 @@ ____
 
 === 组 Schema 配置
 
-下表详细说明了组 Schema 配置的参数。+++<figcaption>+++组 Schema 配置参数+++</figcaption>+++
+下表详细说明了组 Schema 配置的参数。
+
++++<figcaption>+++组 Schema 配置参数+++</figcaption>+++
 
 |===
 | 参数 | 描述
