--- a/versions/latest/modules/en/pages/security/hardening-guides/upgrade-a-hardened-cluster-to-k8s-v1-25.adoc
+++ b/versions/latest/modules/en/pages/security/hardening-guides/upgrade-a-hardened-cluster-to-k8s-v1-25.adoc
@@ -20,7 +20,7 @@ Tab RKE2::
 --
 Perform the following on each node in the cluster:
 
-. Save xref:./rancher-psact.yaml[`rancher-psact.yaml`] in `/etc/rancher/rke2`.
+. Save xref:shared:ROOT:attachment$rancher-psact.yaml[`rancher-psact.yaml`] in `/etc/rancher/rke2`.
 . Edit the RKE2 configuration file:
  .. Update the `profile` field to `cis-1.23`.
  .. Specify the path for the configuration file that you just added: `pod-security-admission-config-file: /etc/rancher/rke2/rancher-psact.yaml`.
@@ -31,7 +31,7 @@ Tab K3s::
 --
 Perform the following on each node in the cluster:
 
-Follow the official K3s instructions on https://docs.k3s.io/known-issues#hardened-125[Upgrading Hardened Clusters from v1.24.x to v1.25.x], but use a xref:./rancher-psact.yaml[custom] Rancher PSA configuration template, instead of the configuration provided on the official K3s site.
+Follow the official K3s instructions on https://docs.k3s.io/known-issues#hardened-125[Upgrading Hardened Clusters from v1.24.x to v1.25.x], but use a xref:shared:ROOT:attachment$rancher-psact.yaml[custom] Rancher PSA configuration template, instead of the configuration provided on the official K3s site.
 --
 ======
 
