--- a/versions/v2.8/modules/zh/pages/security/hardening-guides/upgrade-a-hardened-cluster-to-k8s-v1-25.adoc
+++ b/versions/v2.8/modules/zh/pages/security/hardening-guides/upgrade-a-hardened-cluster-to-k8s-v1-25.adoc
@@ -20,7 +20,7 @@ Tab RKE2::
 --
 在集群中的每个节点上执行以下操作：
 
-. 将 xref:security/hardening-guides/rancher-psact.yaml[`rancher-psact.yaml`] 保存到 `/etc/rancher/rke2` 中。
+. 将 xref:shared:ROOT:attachment$rancher-psact.yaml[`rancher-psact.yaml`] 保存到 `/etc/rancher/rke2` 中。
 . 编辑 RKE2 配置文件：
  .. 将 `profile` 字段更新为 `cis-1.23`。
  .. 指定刚才添加的配置文件的路径：`pod-security-admission-config-file: /etc/rancher/rke2/rancher-psact.yaml`。
@@ -31,7 +31,7 @@ Tab K3s::
 --
 在集群中的每个节点上执行以下操作：
 
-遵循 K3s https://docs.k3s.io/known-issues#hardened-125[将加固集群从 v1.24.x 升级到 v1.25.x]的官方说明，但使用xref:security/hardening-guides/rancher-psact.yaml[自定义]Rancher PSA 配置模板，而不是 K3s 官方网站上提供的配置。
+遵循 K3s https://docs.k3s.io/known-issues#hardened-125[将加固集群从 v1.24.x 升级到 v1.25.x]的官方说明，但使用xref:shared:ROOT:attachment$rancher-psact.yaml[自定义]Rancher PSA 配置模板，而不是 K3s 官方网站上提供的配置。
 --
 ======
 
