Header sequence issues

--- a/versions/latest/modules/en/pages/rancher-admin/global-configuration/provisioning-drivers/manage-cluster-drivers.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/global-configuration/provisioning-drivers/manage-cluster-drivers.adoc
@@ -34,6 +34,6 @@ If you want to use a cluster driver that Rancher doesn't support out-of-the-box,
 . On the *Cluster Drivers* tab, click *Add Cluster Driver*.
 . Complete the *Add Cluster Driver* form. Then click *Create*.
 
-=== Developing your own Cluster Driver
+== Developing your own Cluster Driver
 
 In order to develop cluster driver to add to Rancher, please refer to our https://github.com/rancher-plugins/kontainer-engine-driver-example[example].
