--- a/versions/v2.8/modules/en/pages/cluster-deployment/hosted-kubernetes/sync-clusters.adoc
+++ b/versions/v2.8/modules/en/pages/cluster-deployment/hosted-kubernetes/sync-clusters.adoc
@@ -7,8 +7,7 @@ Syncing allows Rancher to update cluster values so that they're up to date with 
 You may accidentally overwrite the state from one source if you simultaneously process an update from another source. This may also occur if you process an update from one source within 5 minutes of finishing an update from another source.
 ====
 
-
-=== How it works
+== How it works
 
 There are two fields on the Rancher Cluster object that must be understood to understand how syncing works:
 
