--- a/versions/v2.8/modules/en/pages/installation-and-upgrade/quick-start/deploy-workloads/nodeports.adoc
+++ b/versions/v2.8/modules/en/pages/installation-and-upgrade/quick-start/deploy-workloads/nodeports.adoc
@@ -101,7 +101,7 @@ gettingstarted@rancher:~$
 
 Congratulations! You have successfully deployed a workload exposed via a NodePort.
 
-==== What's Next?
+== What's Next?
 
 When you're done using your sandbox, destroy the Rancher Server and your cluster. See one of the following:
 
