--- a/versions/v2.8/modules/en/pages/rancher-admin/global-configuration/provisioning-drivers/manage-cluster-drivers.adoc
+++ b/versions/v2.8/modules/en/pages/rancher-admin/global-configuration/provisioning-drivers/manage-cluster-drivers.adoc
@@ -4,12 +4,11 @@ Cluster drivers are used to create clusters in a xref:cluster-deployment/hosted-
 
 If there are specific cluster drivers that you do not want to show your users, you may deactivate those cluster drivers within Rancher and they will not appear as an option for cluster creation.
 
-=== Managing Cluster Drivers
+== Managing Cluster Drivers
 
 [NOTE]
 .Prerequisites:
 ====
-
 To create, edit, or delete cluster drivers, you need _one_ of the following permissions:
 
 * xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/global-permissions.adoc[Administrator Global Permissions]
@@ -34,6 +33,6 @@ If you want to use a cluster driver that Rancher doesn't support out-of-the-box,
 . On the *Cluster Drivers* tab, click *Add Cluster Driver*.
 . Complete the *Add Cluster Driver* form. Then click *Create*.
 
-=== Developing your own Cluster Driver
+== Developing your own Cluster Driver
 
 In order to develop cluster driver to add to Rancher, please refer to our https://github.com/rancher-plugins/kontainer-engine-driver-example[example].
