--- a/versions/latest/modules/zh/pages/installation-and-upgrade/other-installation-methods/air-gapped/install-kubernetes.adoc
+++ b/versions/latest/modules/zh/pages/installation-and-upgrade/other-installation-methods/air-gapped/install-kubernetes.adoc
@@ -445,10 +445,10 @@ _Kubernetes 集群状态文件仅在使用 RKE 0.2.0 或更高版本时创建。
 后两个文件名中的 `rancher-cluster` 部分取决于你命名 RKE 集群配置文件的方式。
 ====
 
-=== 故障排除
+== 故障排除
 
 参见xref:installation-and-upgrade/troubleshooting/troubleshooting.adoc[故障排除]页面。
 
-=== 后续操作
+== 后续操作
 
 link:install-rancher-ha.adoc[安装 Rancher]
