--- a/versions/v2.8/modules/zh/pages/rancher-admin/users/authn-and-authz/shibboleth-saml/shibboleth-saml.adoc
+++ b/versions/v2.8/modules/zh/pages/rancher-admin/users/authn-and-authz/shibboleth-saml/shibboleth-saml.adoc
@@ -11,9 +11,8 @@ ____
 本节假定你已了解 Rancher、Shibboleth 和 OpenLDAP 是如何协同工作的。有关工作原理的详细说明，请参见xref:rancher-admin/users/authn-and-authz/shibboleth-saml/group-permissions.adoc[本页]
 ____
 
-= 在 Rancher 中设置 Shibboleth
+== 在 Rancher 中设置 Shibboleth
 
-[discrete]
 === Shibboleth 先决条件
 
 ____
@@ -24,7 +23,6 @@ ____
 * 从 IdP 服务器导出 `metadata.xml` 文件。详情请参见 https://wiki.shibboleth.net/confluence/display/SP3/Home[Shibboleth 文档]。
 ____
 
-[discrete]
 === 在 Rancher 中配置 Shibboleth
 
 如果你的组织使用 Shibboleth 进行用户身份认证，你可以通过配置 Rancher 来允许你的用户使用 IdP 凭证登录。
@@ -62,7 +60,6 @@ Rancher 会将你重定向到 IdP 登录页面。输入使用 Shibboleth IdP 的
 
 *结果*：已将 Rancher 配置为使用 Shibboleth。你的用户现在可以使用 Shibboleth 登录名登录 Rancher。
 
-[discrete]
 === SAML 提供商注意事项
 
 SAML 协议不支持用户或用户组的搜索或查找。因此，如果你没有为 Shibboleth 配置 OpenLDAP，则请留意以下警告。
@@ -74,11 +71,10 @@ SAML 协议不支持用户或用户组的搜索或查找。因此，如果你没
 
 要在 Rancher 中分配权限时启用搜索组，你需要为 SAML 身份认证服务配置支持组的后端（例如 OpenLDAP）。
 
-= 在 Rancher 中设置 OpenLDAP
+== 在 Rancher 中设置 OpenLDAP
 
 如果你将 OpenLDAP 配置为 Shibboleth 的后端，SAML 断言会返回到 Rancher，其中包括用于引用组的用户属性。然后，通过认证的用户将能够访问其所在的组有权访问的 Rancher 资源。
 
-[discrete]
 === OpenLDAP 先决条件
 
 必须为 Rancher 配置 LDAP 绑定账号（即 ServiceAccount），来搜索和检索应该具有访问权限的用户和组的 LDAP 条目。建议不要使用管理员账号或个人账号，而应在 OpenLDAP 中创建一个专用账号，该账号对配置的搜索库下的用户和组需要具有只读权限（参见下文）。
@@ -89,7 +85,6 @@ ____
 如果 OpenLDAP 服务器使用的证书是自签名的或不是来自认可的证书颁发机构，请确保手头有 PEM 格式的 CA 证书（包含所有中间证书）。你必须在配置期间粘贴此证书，以便 Rancher 能够验证证书链。
 ____
 
-[discrete]
 === 在 Rancher 中配置 OpenLDAP
 
 配置 OpenLDAP 服务器，组和用户的设置。有关填写每个字段的帮助，请参见xref:rancher-admin/users/authn-and-authz/openldap/reference.adoc[配置参考]。请注意，嵌套组成员资格不适用于 Shibboleth。
