Incorrect file extension

--- a/versions/v2.8/modules/zh/pages/cluster-admin/project-admin/project-administration.adoc
+++ b/versions/v2.8/modules/zh/pages/cluster-admin/project-admin/project-administration.adoc
@@ -22,7 +22,7 @@ _项目_ 是 Rancher 中引入的对象，可帮助你更有组织地管理 Kube
 
 == 授权
 
-非管理者用户只有在xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/global-permissions.adoc[管理员]、xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.md#_集群角色[集群所有者或成员]或xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc#_项目角色[项目所有者]将非管理员用户添加到项目的**成员**选项卡后，才能获取项目的访问权限。
+非管理者用户只有在xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/global-permissions.adoc[管理员]、xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc#_集群角色[集群所有者或成员]或xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc#_项目角色[项目所有者]将非管理员用户添加到项目的**成员**选项卡后，才能获取项目的访问权限。
 
 创建项目的人自动成为xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc#_项目角色[项目所有者]。
 
