--- a/versions/v2.8/modules/zh/pages/cluster-deployment/infra-providers/infra-providers.adoc
+++ b/versions/v2.8/modules/zh/pages/cluster-deployment/infra-providers/infra-providers.adoc
@@ -123,7 +123,7 @@ Rancher 可以自动替换节点池中无法访问的节点。如果节点在指
 
 === 主机驱动
 
-如果你找不到想要的主机驱动，你可以在 Rancher 的xref:rancher-admin/global-configuration/provisioning-drivers/manage-node-drivers.md#_激活停用主机驱动[内置主机驱动]中查看并激活它，也可以xref:rancher-admin/global-configuration/provisioning-drivers/manage-node-drivers.adoc#_添加自定义主机驱动[添加自定义主机驱动]。
+如果你找不到想要的主机驱动，你可以在 Rancher 的xref:rancher-admin/global-configuration/provisioning-drivers/manage-node-drivers.adoc#_激活停用主机驱动[内置主机驱动]中查看并激活它，也可以xref:rancher-admin/global-configuration/provisioning-drivers/manage-node-drivers.adoc#_添加自定义主机驱动[添加自定义主机驱动]。
 
 == RKE2 集群
 
