--- a/versions/v2.8/modules/zh/pages/rancher-admin/cli/kubectl.adoc
+++ b/versions/v2.8/modules/zh/pages/rancher-admin/cli/kubectl.adoc
@@ -27,4 +27,4 @@ _要求_
 . OpenLDAP
 . SAML 身份提供商：Ping，Okta，ADFS，Keycloak 和 Shibboleth
 
-如果你是第一次运行 kubectl（例如，`kubectl get pods`），它会要求你选择一个验证提供程序并使用 Rancher Server 登录。kubeconfig token 会被缓存到 `./.cache/token` 下你运行 kubectl 的路径中。该 Token 在xref:api/api-tokens.md#_在生成的_kubeconfig_中禁用令牌[过期]或xref:api/api-tokens.adoc#_删除令牌[从 Rancher Server 删除]之前都是有效的。过期后，下一个 `kubectl get pods` 命令会要求你再次使用 Rancher Server 登录。
+如果你是第一次运行 kubectl（例如，`kubectl get pods`），它会要求你选择一个验证提供程序并使用 Rancher Server 登录。kubeconfig token 会被缓存到 `./.cache/token` 下你运行 kubectl 的路径中。该 Token 在xref:api/api-tokens.adoc#_在生成的_kubeconfig_中禁用令牌[过期]或xref:api/api-tokens.adoc#_删除令牌[从 Rancher Server 删除]之前都是有效的。过期后，下一个 `kubectl get pods` 命令会要求你再次使用 Rancher Server 登录。
